--- a/Шумбрачинь_максомась.mw
+++ b/Шумбрачинь_максомась.mw
@@ -1,6 +1,8 @@
 '''Шумбрачинь максомась'''
 == Педи орматнеде ==
-Педи орматне( инфекциянь орматне)явовить лия орматнеде этиологиясост - уставамонь тувталсонть, ды весе педи орматнень уставамо тувталокс арыть сеть эли тонат микроорганизматне, истят кода бактерият (вишкинеде вишка, модамасторонть лангсо вейке клеткасто аштиця, эрикс организмат), вируст, сезялт, простейшейть (бактериятнеде явовить седе превейстэ эрямо койсэст-цикласост, ды седе покш эрямонтень маштовикс эрьва кодамо кедьёнксонь (эрьва кодат уйнема понынеть-жгуткеть, ундулировиця (толкун ладсо лыкиця) мембранат ды лият мезть)конатненень кандовить лямблиятне, амёбатне, инфузориятне,пангтнэ. Секскак эрьва микроорганизманть педямодо мейле ломаненть организмасонть устави реагировамо, кона пачти организманть микроорганизматнень изнямозост ды тень кувалма пичкамонтень, лиякс - изни микроорганизмась ды врады азорнть организманть куловтомадонзо мейле. Вана, нурькинестэ, эрьва педи орманть смустезэ.
+Педи орматне (инфекциянь орматне) явовить лия орматнеде этиологиясост - уставамонь тувталсонть, ды весе педи орматнень уставамо тувталокс арыть сеть эли тонат микроорганизматне, истят кода бактерият (вишкинеде вишка, модамасторонть лангсо вейке клеткасто аштиця, эрикс организмат), вируст, сезялт, простейшейть (бактериятнеде явовить седе превейстэ эрямо койсэст-цикласост, ды седе покш эрямонтень маштовикс эрьва кодамо кедьёнксонь (эрьва кодат уйнема понынеть-жгуткеть, ундулировиця (толкун ладсо лыкиця) мембранат ды лият мезть) конатненень кандовить лямблиятне, [[амёба]]тне, инфузориятне, [[пангт]]нэ. 
+
+Секскак эрьва микроорганизманть педямодо мейле ломаненть организмасонть устави реагировамо, кона пачти организманть микроорганизматнень изнямозост ды тень кувалма пичкамонтень, лиякс - изни микроорганизмась ды врады азорнть организманть куловтомадонзо мейле. Вана, нурькинестэ, эрьва педи орманть смустезэ.
 
 == Коз орма ==
 
