/* Седеень ишемиянь орма */

--- a/Шумбрачинь_максомась.mw
+++ b/Шумбрачинь_максомась.mw
@@ -23,10 +23,11 @@
 Неть орматне явовить зярыя пельксэс:
 === Седеень ишемиянь орма=== 
 Ишемиясь - те седеентень верень пачтявомань асатомась.
-* стенокардия
+* [[стенокардия]]
 * аволь стабильной стенокардия ( прогрессировиця, пшти коронарной синдром)
 * стабильной стенокардия.1,2,3,4 Функциональной Класст.
 * миокардонь инфаркт (седей сывелень пельксэнь свалшкас кулома). Ды сонзэ стакалгавтыця лисевкстнэ - кардиогенной шок, тевелявонь летьке таргозема ( тевелявонь отёк) ды лият.
+
 === Аритмият ===
 Аритмият - седеень виде токноманть колавоматне.
 * липниця( мерцательной) аритмиясь.
