*Empty MediaWiki Message*

--- a/Херсононь_ёнкс.mw
+++ b/Херсононь_ёнкс.mw
@@ -3,7 +3,7 @@
  |Эрзянь лем                       = Донецкоень ёнкс
  |Эсьлем                           = {{Lang-uk|Херсо́нська о́бласть}}
  |Герб                             = 
- |Коцт                             = 
+ |Коцт                             = Flag of Kherson Oblast .svg
  |Ширина герба                     = 
  |Ширина флага                     = 
  |Описание герба                   = 
