*Empty MediaWiki Message*

--- a/Херсононь_ёнкс.mw
+++ b/Херсононь_ёнкс.mw
@@ -1,6 +1,6 @@
 {{Регион
  |Цвет1                            = {{Цвет|Украина Мастор}}
- |Эрзянь лем                       = Донецкоень ёнкс
+ |Эрзянь лем                       = Херсононь ёнкс
  |Эсьлем                           = {{Lang-uk|Херсо́нська о́бласть}}
  |Герб                             = 
  |Коцт                             = Flag of Kherson Oblast .svg
@@ -51,7 +51,7 @@
  |Максимальная высота              = 
  |Средняя высота                   = 
  |Минимальная высота               = 
- |Карта                            = Kherson in Ukraine (claims hatched).svg
+ |Карта                            = Kherson in Ukraine.svg
  |Размер карты                     = 250
  |Карта административной единицы   = 
   |Размер карты ае                 = 
