--- a/Мокшень_Масканя_(Якстерекуро_буе).mw
+++ b/Мокшень_Масканя_(Якстерекуро_буе).mw
@@ -12,8 +12,8 @@
  |описание флага          = 
  |ширина герба            = 
  |ширина флага            = 
-  |lat_dir = |lat_deg = |lat_min = |lat_sec = 
-  |lon_dir = |lon_deg = |lon_min = |lon_sec = 
+  |lat_dir = |lat_deg = 54.507371|lat_min = |lat_sec = 
+  |lon_dir = |lon_deg = 43.789874|lon_min = |lon_sec = 
   |CoordAddon             = 
   |CoordScale             = 
  |размер карты страны     = 
