*Empty MediaWiki Message*

--- a/Мокшень_Куженя_(Якстерекуро_буе).mw
+++ b/Мокшень_Куженя_(Якстерекуро_буе).mw
@@ -62,7 +62,7 @@
 '''Мокшень Куженя''' ({{Lang-ru|с. Мордовские Полянки}}) — мокшонь<ref name="Память, запечатленная в слове">Цыганкин Д. В. Память, запечатленная в слове. Словарь географических названий Республики Мордовия.  Саранск, 2005. – 431 с. {{ref-ru}}, {{ref-myv}}, {{ref-mdf}}</ref> веле [[Якстерекуро буе]]сэ, [[Мордовия]]со.
 
 Кода лецтяви:
-{{Цитатань ушодома}}({{Lang-myv|«Списке населенных мест Пензенской губернии»}}) ([[1869 ие]]) ''Жидовка (Жилые Полянки) – веле 42кудот марто Якстеркуронь уездсэ''.
+{{Цитатань ушодома}}({{Lang-myv|«Списке населенных мест Пензенской губернии»}}) ([[1869 ие]]) ''Жидовка (Жилые Полянки) – веле 42 кудот марто Якстеркуронь уездсэ''.
 {{oq|ru|В «СНМ Пензенской губернии» (1869) – Жидовка (Жилые Полянки), деревня из 42 дворов  Краснослободского уезда.}}
 {{Цитатань пе}}
 
@@ -72,7 +72,11 @@
 Мокшонь лемесь саеви {{Lang-mdf|«куженя»}} {{Lang-ru|«полянка»}}<ref name="Память, запечатленная в слове"/>. 
 
 == Содавикс ломанть те велестэнть ==
+* С.Г.Потапкин <ref name="ДМ">[http://kc13.ru/index/laushki_novyj_usad/0-31 Краснослободск ]{{ref-ru}}</ref> — келеньветий/ -содый 
+* В.М.Волков<ref name="ДМ">[http://kc13.ru/index/laushki_novyj_usad/0-31 Краснослободск ]{{ref-ru}}</ref> — заслуженно Мордовиянь юрист
+
 == Веленть эрямозо  ==
+1913 иестэ ульнесь 1 вейсэньдявкс ды 86 кудот (643 лом.), школа, кшиньпурнамо лавка, 2 вармань ведьгевть, 3 оеньпивсемат ды суронь яжамка, кузьниця;  1926 иестэ – 133 вейсэньхозяйстват (907 лом.); 1931 и. велесэнть лововильть 147 хозяйстват (1013 лом.). 
 == Сёрм.: ==
 <references />
 
