--- a/Мокшень_Куженя_(Якстерекуро_буе).mw
+++ b/Мокшень_Куженя_(Якстерекуро_буе).mw
@@ -76,7 +76,8 @@
 * В.М.Волков<ref name="ДМ">[http://kc13.ru/index/laushki_novyj_usad/0-31 Краснослободск ]{{ref-ru}}</ref> — заслуженно Мордовиянь юрист
 
 == Веленть эрямозо  ==
-1913 иестэ ульнесь 1 вейсэньдявкс ды 86 кудот (643 лом.), школа, кшиньпурнамо лавка, 2 вармань ведьгевть, 3 оеньпивсемат ды суронь яжамка, кузьниця;  1926 иестэ – 133 вейсэньхозяйстват (907 лом.); 1931 и. велесэнть лововильть 147 хозяйстват (1013 лом.). 
+[[1913 ие]]стэ ульнесь 1 вейсэньдявкс ды 86 кудот (643 лом.), школа, кшиньпурнамо лавка, 2 вармань ведьгевть, 3 оеньпивсемат ды суронь яжамка, кузьниця;  [[1926 ие]]стэ – 133 вейсэньхозяйстват (907 лом.); [[1931 ие|1931 и.]] велесэнть лововильть 147 хозяйстват (1013 лом.).
+
 == Сёрм.: ==
 <references />
 
