*Empty MediaWiki Message*

--- a/Мокшень_Масканя_(Якстерекуро_буе).mw
+++ b/Мокшень_Масканя_(Якстерекуро_буе).mw
@@ -1,4 +1,4 @@
-
+{{Лия смустьтне|Мокшень Масканя (смустьтне)}}
 {{ЭТ
  |статус                  = веле
  |Эрзянь лем              = Мокшень Масканя
