/* Якстерекуро буень ошт ды велеть */

--- a/Якстерекуро_буе.mw
+++ b/Якстерекуро_буе.mw
@@ -135,7 +135,7 @@
 * [[Рябкинский Завод (Якстерекуро буе)|Рябкинский Завод]] – ({{lang-ru|д. Рябкинский Завод}})
 * [[Селищи (Якстерекуро буе)|Селищи]] – ({{lang-ru|с. Селищи}})
 * [[Семеновский (Якстерекуро буе)|Семеновский]] – ({{lang-ru|д. Семеновский}})
-* [[Сивинь (Якстерекуро буе)|Сивинь]] – ({{lang-ru|с. Сивинь}})
+* [[Севонь (Якстерекуро буе)|Севонь]] – ({{lang-ru|с. Сивинь}})
 * [[Синяково (Якстерекуро буе)|Синяково]] – ({{lang-ru|д. Синяково}})
 * [[Слободские Дубровки (Якстерекуро буе)|Слободские Дубровки]] – ({{lang-ru|с. Слободские Дубровки}})
 * [[Среднее Поле (Якстерекуро буе)|Среднее Поле]] – ({{lang-ru|д. Среднее Поле}})
@@ -149,8 +149,6 @@
 * [[Черновские Выселки (Якстерекуро буе)|Черновские Выселки]] – ({{lang-ru|с. Черновские Выселки}})
 * [[Чукалы (Якстерекуро буе)|Чукалы]] – ({{lang-ru|с. Чукалы}})
 * [[Шаверки (Якстерекуро буе)|Шаверки]] – ({{lang-ru|с. Шаверки}})
-
-
 
 == Сёрм.: ==
 * [http://mnogolik-mordovia.mrsu.ru/n_20.htm Многоликая Мордовия:Список населенных пунктов Краснослободского района]{{Ref-ru}}
