/* Мокша леень сянголейтне (вп прамсто) */

--- a/Мокша_лей.mw
+++ b/Мокша_лей.mw
@@ -54,7 +54,7 @@
 * 295 вп: лей Уркат
 * 302 вп: лей Сухой Урей
 * 310 вп: лей Варма
-* 338 вп: лей Сивинь
+* 338 вп: лей [[Сивинь]]
 * 346 вп: лей Шапа
 * 351 вп: лей Гуменка
 * 360 вп: лей Рябка
