*Empty MediaWiki Message*

--- a/Севонь_лей.mw
+++ b/Севонь_лей.mw
@@ -25,7 +25,7 @@
 }}
 
 
-'''Севонь<ref name="Память, запечатленная в слове">Цыганкин Д. В. Память, запечатленная в слове. Словарь географических названий Республики Мордовия.  Саранск, 2005. – 431 с. {{ref-ru}}, {{ref-myv}}</ref>''' {{Lang-ru|Сивинь}} — лей [[Мордовия Республикась|Мордовиясо]]. Витьёнонь сянглей [[Мокша лей|Мокша леень]].
+'''Севонь<ref name="Память, запечатленная в слове">Цыганкин Д. В. Память, запечатленная в слове. Словарь географических названий Республики Мордовия.  Саранск, 2005. – 431 с. {{ref-ru}}, {{ref-myv}}</ref>''' ({{Lang-ru|Сивинь}} )— лей [[Мордовия Республикась|Мордовиясо]]. Витьёнонь сянглей [[Мокша лей|Мокша леень]].
 
 Кувалмозо 124 [[Вайгельпе|вп]], кувалмозо весемезэ 1830 тёж. вп².
 
