*Empty MediaWiki Message*

--- a/Севонь_(смустьтне).mw
+++ b/Севонь_(смустьтне).mw
@@ -1,6 +1,6 @@
 '''Севонь ''':
 ;Топонимт
-* [[Севонь (Якстерекуро буе)|Севонь]] — мокшонь веле [[Якстерекуро буе]]сэ [[Мордовия]]со.
+* [[Севонь (Якстерекуро буе)|Севонь]] — рузонь веле [[Якстерекуро буе]]сэ [[Мордовия]]со.
 
 ;Гидронимт
 * [[Севонь лей|Севонь]] — лей [[Россия]]со, [[Мокша лей|Мокша]] леенть витьсянглей.
