*Empty MediaWiki Message*

--- a/Мокшень_Масканя_(Якстерекуро_буе).mw
+++ b/Мокшень_Масканя_(Якстерекуро_буе).mw
@@ -62,7 +62,7 @@
 '''Мокшень Масканя''' (лиякс кортыть: '''Сире Масканя,  Мокшень Мазканя<ref name="Память, запечатленная в слове">Цыганкин Д. В. Память, запечатленная в слове. Словарь географических названий Республики Мордовия.  Саранск, 2005. – 431 с. {{ref-ru}}, {{ref-myv}}, {{ref-mdf}}</ref>''', {{Lang-ru|д. Мордовское Маскино}}) — мокшонь веле [[Якстерекуро буе]]сэ, [[Мордовия]]со.
 
 Ашти [[Мокша лей]] лангсо. Кода лецтяви:
-{{Цитатань ушодома}}({{Lang-myv|«Списке населенных мест Пензенской губернии»}}) ([[1869 ие]]) ''Мордовское Маскино – веле 47 кудот марто Саранонь уездсэ''.
+{{Цитатань ушодома}}({{Lang-myv|«Списке населенных мест Пензенской губернии»}}) ([[1869 ие]]) ''Мордовское Маскино – веле 47 кудот марто Якстерекуронь уездсэ''.
 {{oq|ru|В «СНМ Пензенской губернии» (1869) – Мордовское Маскино, деревня из 47 дворов  Краснослободского уезда.}}
 {{Цитатань пе}}
 
