*Empty MediaWiki Message*

--- a/Парка_(Якстерекуро_буе).mw
+++ b/Парка_(Якстерекуро_буе).mw
@@ -49,7 +49,7 @@
  |часовой пояс            = +3
  |DST                     = 
  |телефонный код          = 
- |почтовый индекс         = 
+ |почтовый индекс         = 431281
  |почтовые индексы        = 
  |автомобильный код       = 13
  |вид идентификатора      = 
