*Empty MediaWiki Message*

--- a/Мокша_лей.mw
+++ b/Мокша_лей.mw
@@ -48,7 +48,7 @@
 * 191 вп: лей Сатис
 * 231 вп: лей Ломовка
 * 248 вп: лей Большой Аксел
-* 258 вп: лей Урей (Урейка)
+* 258 вп: лей [[Урей]] (Урейка)
 * 266 вп: лей Шавиц (Варсклей)
 * 294 вп: лей Нулуй
 * 295 вп: лей Уркат
