--- a/Тустат_веле_(Якстерекуро_буе).mw
+++ b/Тустат_веле_(Якстерекуро_буе).mw
@@ -11,8 +11,8 @@
  |описание флага          = 
  |ширина герба            = 
  |ширина флага            = 
-  |lat_dir = |lat_deg = |lat_min = |lat_sec = 
-  |lon_dir = |lon_deg =  |lon_min = |lon_sec = 
+  |lat_dir = |lat_deg = 54.505461|lat_min = |lat_sec = 
+  |lon_dir = |lon_deg = 43.746813|lon_min = |lon_sec = 
   |CoordAddon             = 
   |CoordScale             = 
  |размер карты страны     = 
