*Empty MediaWiki Message*

--- a/Чукалы_лей.mw
+++ b/Чукалы_лей.mw
@@ -24,13 +24,13 @@
    |Буе                   = 
 }}
 
-'''Чукалы лей''' ({{lang-ru|Чукалы}}) — лей, коната чуди [[Ветькень Республикась|Ветькень Масторга]]. Урей леенть витьёнонь сянглей<ref name="Память, запечатленная в слове">Цыганкин Д. В. Память, запечатленная в слове. Словарь географических названий Республики Мордовия.  Саранск, 2005. – 431 с. {{ref-ru}}, {{ref-myv}}</ref>. 
+'''Чукалы лей''' ({{lang-ru|Чукалы}}) — лей, коната чуди [[Ветькень Республикась|Ветькень Масторга]]. [[Урей лей|Урей леенть]] витьёнонь сянглей<ref name="Память, запечатленная в слове">Цыганкин Д. В. Память, запечатленная в слове. Словарь географических названий Республики Мордовия.  Саранск, 2005. – 431 с. {{ref-ru}}, {{ref-myv}}</ref>. 
 
 == Кой-мезе лейденть ==
 Леенть кувалмозо 12 [[Вайгельбе|вб]]. Чукалы лей лангсо ашти: [[Карлино (Чополтбуе)|Карлино]]..
 
 ==Леенть лемденть==
-Лемесь саеви {{Lang-cv|чук}}, ({{Lang-ru|«ложбина, овраг, яма – место моления по языческому обычаю»}})(Нестеров,  1980, с.  108),  ''чуклыть'' «приносить жертву»  (Даль, 1998, IV, с.  1375) <ref name="Память, запечатленная в слове">Цыганкин Д. В. Память, запечатленная в слове. Словарь географических названий Республики Мордовия.  Саранск, 2005. – 431 с. {{ref-ru}}, {{ref-myv}}</ref>
+Лемесь саеви {{Lang-cv|чук}}, ({{Lang-ru|«ложбина, овраг, яма – место моления по языческому обычаю»}})(Нестеров,  1980, с.  108),  ''чуклыть'' «приносить жертву»<ref name="Толковый словарь живого великорусского">Даль В. Толковый словарь живого великорусского языка. Т. 1 – 4. М.: Цитадель, 1998.  IV, с.  1375{{ref-ru}}</ref> <ref name="Память, запечатленная в слове">Цыганкин Д. В. Память, запечатленная в слове. Словарь географических названий Республики Мордовия.  Саранск, 2005. – 431 с. {{ref-ru}}, {{ref-myv}}</ref>
 
 == Сёрм.: ==
 <references />
