*Empty MediaWiki Message*

--- a/Тустат_веле_(Якстерекуро_буе).mw
+++ b/Тустат_веле_(Якстерекуро_буе).mw
@@ -58,7 +58,7 @@
  |сайт                    = 
  |язык сайта              = 
 }}
-'''Тустат веле'''  ({{Lang-ru|д. Тустатово}}) — мокшонь веле [[Якстерекуро буе]]сэ, [[Мордовия]]со.
+'''Тустат веле<ref name="ВАГАНТ">[http://www.isi.mrsu.ru/editions/files/vagant_2012-13.pdf   Анаскина Татьяна Сергеевна: ИЗ ИСТОРИИ СЕЛ РУССКОЕ И МОРДОВСКОЕ МАСКИНО КРАСНОСЛОБОДСКОГО РАЙОНА МОРДОВИИ] {{ref-ru}}</ref>'''  ({{Lang-ru|д. Тустатово}}) — мокшонь веле [[Якстерекуро буе]]сэ, [[Мордовия]]со.
 
 Ашти [[Мокша лей|Мокша леень]] сянглей лангсо. Кода лецтяви<ref name="Память, запечатленная в слове">Цыганкин Д. В. Память, запечатленная в слове. Словарь географических названий Республики Мордовия.  Саранск, 2005. – 431 с. {{ref-ru}}, {{ref-myv}}, {{ref-mdf}}</ref>:
 {{Цитатань ушодома}} ({{Lang-myv|([[1869 ие]]) ''Устатово (Тустатово) – веле 23 кудот марто Якстерекуронь уездсэ''.}}
