--- a/Потякш_(Якстерекуро_буе).mw
+++ b/Потякш_(Якстерекуро_буе).mw
@@ -76,6 +76,9 @@
 * В. И. Антошкин<ref name="ВАГАНТ"/> —  ({{Lang-ru|члена ЛДПР, командир ОМОН и СОБР г. Санкт-Петербурга, депутат Государственной думы Ленинградской области}})
 
 == Веленть эрямозо  ==
+Ансяк [[1743 ие]]стэ Потякшсо эрицятне ульнесть тиринь, мокшонь пазонь кемема койстэст православияс тонгозь, ды сынст аравтызь церкуватнес рузонь велетнесэ Никольское ды Аракчеево. [[1894 ие]]стэ Потякш  велесэнть ульнесь 14 кудот-кардазт (681 лом.), [[1913 ие]]стэ - 101 кудот-кардазт (715 лом.), [[1926 ие]]стэ 125 кудот-кардазт (844 лом.); [[1931 ие]]стэ – 133 кудот-кардазт (851 лом.).
+ 
+
 
 == Сёрм.: ==
 <references />
