*Empty MediaWiki Message*

--- a/Сирс_Сендру_(Якстерекуро_буе).mw
+++ b/Сирс_Сендру_(Якстерекуро_буе).mw
@@ -59,7 +59,7 @@
  |сайт                    = 
  |язык сайта              = 
 }}
-'''Сирс Сендру''' лиякс кортыть: '''Сире Сендру, Сивинь трва, Сире веле'''<ref name="Память, запечатленная в слове">Цыганкин Д. В. Память, запечатленная в слове. Словарь географических названий Республики Мордовия.  Саранск, 2005. – 431 с. {{ref-ru}}, {{ref-myv}}, {{ref-mdf}}</ref>''', {{Lang-ru|с. Старое Синдрово}}) — мокшонь веле [[Якстерекуро буе]]сэ, [[Мордовия]]со.
+'''Сирс Сендру''' лиякс кортыть: '''Сире Сендру, Сивинь трва, Сире веле'''<ref name="Память, запечатленная в слове">Цыганкин Д. В. Память, запечатленная в слове. Словарь географических названий Республики Мордовия.  Саранск, 2005. – 431 с. {{ref-ru}}, {{ref-myv}}, {{ref-mdf}}</ref>, {{Lang-ru|с. Старое Синдрово}}) — мокшонь веле [[Якстерекуро буе]]сэ, [[Мордовия]]со.
 
 Ашти [[Севонь лей]] лангсо. Кода лецтяви:
 {{Цитатань ушодома}} ({{Lang-myv|([[1869 ие]]) ''Старое Синдрово – веле 186 кудот марто Якстерекуронь уездсэ''.}}
