*Empty MediaWiki Message*

--- a/Од_Сендру_(Якстерекуро_буе).mw
+++ b/Од_Сендру_(Якстерекуро_буе).mw
@@ -69,7 +69,7 @@
 Эрицятнеде: [[2001 ие]]стэ ульнесь 158 лом., 2010 иень ловномасонть - 126 ломанть. 
 
 == Веленть лемденть  ==
-Лемесь-гидроним, саеви мокшонь '''''Сивинь''''' + '''трва''' {{Lang-ru|«берег»}}  валтнестэ<ref name="Память, запечатленная в слове"/>.
+Лемесь-гидроним, саеви мокшонь '''''[[Севонь лей|Сивинь]]''''' + '''трва''' {{Lang-ru|«берег»}}  валтнестэ<ref name="Память, запечатленная в слове"/>.
 
 == Содавикс ломанть те велестэнть ==
 * П. С. Клещунов<ref name="Краснослабодск">[http://kc13.ru/index/laushki_novyj_usad/0-31 Краснослабодск //Новое Синдрово] {{ref-ru}}</ref> — сёрмадей 
