--- a/Барановка_(Якстерекуро_буе).mw
+++ b/Барановка_(Якстерекуро_буе).mw
@@ -52,9 +52,9 @@
  |почтовый индекс         = 431261
  |почтовые индексы        = 
  |автомобильный код       = 13
- |вид идентификатора      = 
- |цифровой идентификатор  = ОКАТО
- |категория в Commons     = {{ОКАТО|89234868003}}
+ |вид идентификатора      = ОКАТО
+ |цифровой идентификатор  = {{ОКАТО|89234868003}}
+ |категория в Commons     = 
  |сайт                    = 
  |язык сайта              = 
 }}
