*Empty MediaWiki Message*

--- a/Барановка_(Якстерекуро_буе).mw
+++ b/Барановка_(Якстерекуро_буе).mw
@@ -59,10 +59,16 @@
  |язык сайта              = 
 }}
 {{Лия смустьтне|Барановка (смустьтне)}}
-'''Барановка''' ({{Lang-ru| д. Барановка}}) — веле [[Якстерекуро буе]]сэ, [[Мордовия]]со.
+'''Барановка''' ({{Lang-ru| д. Барановка}}) —  рузонь<ref name="Память, запечатленная в слове">Цыганкин Д. В. Память, запечатленная в слове. Словарь географических названий Республики Мордовия.  Саранск, 2005. – 431 с. {{ref-ru}}, {{ref-myv}}, {{ref-mdf}}</ref> веле [[Якстерекуро буе]]сэ, [[Мордовия]]со.
 
+Ашти [[Мокша лей]] лангсо. Кода лецтяви:
+{{Цитатань ушодома}} ({{Lang-myv|([[1869 ие]]) ''Барановка – веле 12 кудот марто Якстерекуронь уездсэ''.}}
+{{oq|ru|В «СНМ Пензенской губернии» (1869) (1869) – Барановка, деревня из 12 дворов  Краснослободского уезда.}}
+{{Цитатань пе}}
 
+Эрицятнеде: [[2002 ие]]стэ ульнесь 5 лом., 2010 иень ловномасонть - 4 ломанть. 
 == Веленть лемденть  ==
+Лемесь-антропоним. '''''Баранов''''' буелем марто ульнесь васеньце веленть путыцязо<ref name="Память, запечатленная в слове"/>.
 == Содавикс ломанть те велестэнть ==
 == Веленть эрямозо  ==
 == Сёрм.: ==
