*Empty MediaWiki Message*

--- a/Барановка_(Атюрьбуе).mw
+++ b/Барановка_(Атюрьбуе).mw
@@ -1,3 +1,4 @@
+{{Лия смустьтне|Барановка (смустьтне)}}
 {{ЭТ
  |статус                  = веле
  |Эрзянь лем              = Барановка
@@ -60,8 +61,19 @@
 }}
 '''Барановка'''  ({{lang-ru|д. Барановка}}) — те мокшонь<ref name="Многоликая">[http://mnogolik-mordovia.mrsu.ru/b_Baranovka.htm Многоликая Мордовия: Деревня Барановка] {{Ref-ru}}</ref> веле [[Мордовия Республикась|Мордовия]]со, [[Атюрьбуе]]сэ.
 
+Ашти [[Ляце лей]] (Ляча) лангсо. Кода лецтяви:
+{{Цитатань ушодома}} ({{Lang-myv|([[1931 ие]]) ''Барановка – веле 82 кудот марто''.}}
+{{oq|ru|В «СНП Средне-Волжского края» (1931) –Барановка, хутор из 82 дворов. Основана в 30-х годах ХХ века переселенцами из села Атюрьево.}}
+{{Цитатань пе}}
+
+Эрицятнеде: [[2002 ие]]стэ ульнесь 183 лом., 2010 иень ловномасонть - 179 ломанть. 
+== Веленть лемденть  ==
+Лемесь-антропоним<ref name="Память, запечатленная в слове">Цыганкин Д. В. Память, запечатленная в слове. Словарь географических названий Республики Мордовия.  Саранск, 2005. – 431 с. {{ref-ru}}, {{ref-myv}}, {{ref-mdf}}</ref>.
+== Содавикс ломанть те велестэнть ==
+== Веленть эрямозо  ==
 == Сёрм.: ==
 <references />
+
 
 [[Category:Мордовиянь велеть]]
 [[Category:Атюрьбуень велеть]]
