*Empty MediaWiki Message*

--- a/Грачевник_(Якстерекуро_буе).mw
+++ b/Грачевник_(Якстерекуро_буе).mw
@@ -1,3 +1,4 @@
+{{Лия смустьтне|Грачевник (смустьтне)}}
 {{ЭТ
  |статус                  = веле
  |Эрзянь лем              = Грачевник
@@ -59,8 +60,14 @@
  |язык сайта              = 
 }}
 
-'''Грачевник''' ({{Lang-ru| д. Грачевник}}) — веле [[Якстерекуро буе]]сэ, [[Мордовия]]со.
+'''Грачевник''' ({{Lang-ru| д. Грачевник}}) — рузонь<ref name="Память, запечатленная в слове">Цыганкин Д. В. Память, запечатленная в слове. Словарь географических названий Республики Мордовия.  Саранск, 2005. – 431 с. {{ref-ru}}, {{ref-myv}}, {{ref-mdf}}</ref> веле [[Якстерекуро буе]]сэ, [[Мордовия]]со.
 
+Ашти [[Мокша лей]] лангсо. Кода лецтяви<ref name="Память, запечатленная в слове"/>:
+{{Цитатань ушодома}} ({{Lang-myv|([[1869 ие]]) ''Грачевник – веле 35 кудот марто Якстерекуронь уездсэ''.}}
+{{oq|ru|В «СНМ Пензенской губернии» (1894) –  Грачевник, деревня из 35 дворов  Краснослободского уезда.}}
+{{Цитатань пе}}
+
+Эрицятнеде: [[2002 ие]]стэ ульнесь 113 лом., 2010 иень ловномасонть - 110 ломанть. 
 
 == Веленть лемденть  ==
 == Содавикс ломанть те велестэнть ==
