*Empty MediaWiki Message*

--- a/Йовлань_Оло.mw
+++ b/Йовлань_Оло.mw
@@ -33,9 +33,12 @@
 
 == Йовлань Олонь лемсэ музей ==
 [[Image:Etno kudo.JPG|thumb|left|400px|Йовлань Олонь лемсэ «Этно-Кудо»]]
-[[2006]] иень[[Таштамковонь 6 чи]]стэ  Вирь Тавла велесэнть ульнезь панжозь [[Йовлань Олонь лемсэ «Этно-Кудо»]]. Те кудось, конань сон рамизеть 1989 иестэ, ульнесь сонензэ оймень витнема таркакс - тезей сакшныль оймсеме стакачитнеде, саиль од вийть эсинзэ седямо-морамо тевтнене, арсиль кода седе пек сравтомонзо эрзя раськенть мазычинть.
+[[2006]] иень[[Таштамковонь 6 чи]]стэ  Вирь Тавла велесэнть ульнезь панжозь [[Йовлань Олонь лемсэ «Этно-Кудо»]]<ref>Евдокимова Т. Его «Торама» звучит на весь мир. // Вперед. Атяшевского района. – 14 сентября. – С. 4. </ref>. Те кудось, конань сон рамизеть 1989 иестэ, ульнесь сонензэ оймень витнема таркакс - тезей сакшныль оймсеме стакачитнеде, саиль од вийть эсинзэ седямо-морамо тевтнене, арсиль кода седе пек сравтомонзо эрзя раськенть мазычинть.
 
 == Кулят ==
 * [http://www.erzia.saransk.ru/arhiv.php?n=2523&nom11=294 Кулят Йовлань Олонь (В.Ромашкин) лемсэ «Этно» кудосто]
+
+== Сёрм.: ==
+<references />
 
 [[Category:Эрзянь Ине ломанть|Й]]
