*Empty MediaWiki Message*

--- a/Йовлань_Олонь_лемсэ_Этно-кудо.mw
+++ b/Йовлань_Олонь_лемсэ_Этно-кудо.mw
@@ -1,9 +1,11 @@
 [[Image:Etno kudo.JPG|thumb|right|250px|Йовлань Олонь лемсэ Этно-Кудо]]
 '''Йовлань Олонь лемсэ Этно-кудо''' — те эрзянь культурань музеесь, кона ашти [[Кочкурбуе|Кочкурбуень]] [[Вирь Тавла веле|Вирь Тавла велесэ]].
 
-Сон ульнесь пажозь [[2006 ие]]нь [[таштамковонь 6 чи]]стэ, коли [[Йовлань Оло]]не топодевельть 55 ие чачома чистэнзе. Покш мелезе ульнесь Йовлань Олонь сестэ коли сон ульнесь содавиксев морыцякс, [[«Торама» морамо-седямо кужо|«Торама» морамо-седямо кужонть]] прявтокс,  теемс-ветямс Вирь Тавлав этно-инжень ки. Кода сон арсесь тесэ паро улевель невтнемс эрзянь койтнень - [[чувто]]сто керсиманть, пурнавомс фольклоронь морамотнене,  якамс вирев алашасо эрзянь кемема таркатьнене. Те ульнесть истят арсеманзо,  ансяк морыцясь 2002 иестэ кулось. [[4 (ловома вал)|Ниле]] иеть кудынесь, конань сон рамизеть,  састынге  наксадыль ды коськиль.     
+Сон ульнесь пажозь [[2006 ие]]нь [[таштамковонь 6 чи]]стэ<ref>Евдокимова Т. Его «Торама» звучит на весь мир. // Вперед. Атяшевского района. – 14 сентября. – С. 4. </ref>, коли [[Йовлань Оло]]не топодевельть 55 ие чачома чистэнзе. Покш мелезе ульнесь Йовлань Олонь сестэ коли сон ульнесь содавиксев морыцякс, [[«Торама» морамо-седямо кужо|«Торама» морамо-седямо кужонть]] прявтокс,  теемс-ветямс Вирь Тавлав этно-инжень ки. Кода сон арсесь тесэ паро улевель невтнемс эрзянь койтнень - [[чувто]]сто керсиманть<ref name="Туристско-информационный центр Республики Мордовия">[http://turizmrm.ru/news/ethno-tourism-in-mordovia-five-places-worth-visiting-tourists! ЭТНОТУРИЗМ В МОРДОВИИ: ПЯТЬ МЕСТ, КОТОРЫЕ ОБЯЗАТЕЛЬНО СТОИТ ПОСЕТИТЬ ТУРИСТАМ!]</ref>, пурнавомс фольклоронь морамотнене,  якамс вирев алашасо эрзянь кемема таркатьнене. Те ульнесть истят арсеманзо,  ансяк морыцясь 2002 иестэ кулось. [[4 (ловома вал)|Ниле]] иеть кудынесь, конань сон рамизеть,  састынге  наксадыль ды коськиль.     
  
 
 Йовлань Олонь лемсэ Этно-кудонь прявтось: П. Рябов ([[Калаганонь Керяз]]).
+== Сёрм.: ==
+<references />
 
 [[Category:Эрзянь музейть]]
