*Empty MediaWiki Message*

--- a/Лопатино_(смустьтне).mw
+++ b/Лопатино_(смустьтне).mw
@@ -1,6 +1,15 @@
 Лопатино:
-==Топоним==
-===Мордовия==
+;Топонимт
+
+==Мордовия==
 * [[Лопатино (Торбейбуе)|Лопатино]] — веле [[Торбейбуе]]сэ
 * [[Лопатино (Чаунзабуе)|Лопатино]] — веле [[Чаунзабуе]]сэ
 * [[Лопатино (Лямбирьбуе)|Лопатино]] — веле [[Лямбирьбуе]]сэ
+
+
+;Гидронимт
+* [[Лопатина лей|Лопатина]] — лей [[Россия]]со.
+
+
+__DISAMBIG__
+[[Category:Авейкетькс]]
