--- a/Якстерекуро_буе.mw
+++ b/Якстерекуро_буе.mw
@@ -134,7 +134,7 @@
 * [[Русские Полянки (Якстерекуро буе)|Русские Полянки]] – ({{lang-ru|д. Русские Полянки}})
 * [[Рябкинский Завод (Якстерекуро буе)|Рябкинский Завод]] – ({{lang-ru|д. Рябкинский Завод}})
 * [[Селищи (Якстерекуро буе)|Селищи]] – ({{lang-ru|с. Селищи}})
-* [[Семеновский (Якстерекуро буе)|Семеновский]] – ({{lang-ru|д. Семеновский}})
+* [[Семеновской (Якстерекуро буе)|Семеновской]] – ({{lang-ru|д. Семеновский}})
 * [[Севонь (Якстерекуро буе)|Севонь]] – ({{lang-ru|с. Сивинь}})
 * [[Синяково (Якстерекуро буе)|Синяково]] – ({{lang-ru|д. Синяково}})
 * [[Слободские Дубровки (Якстерекуро буе)|Слободские Дубровки]] – ({{lang-ru|с. Слободские Дубровки}})
