*Empty MediaWiki Message*

--- a/Гумны_(Якстерекуро_буе).mw
+++ b/Гумны_(Якстерекуро_буе).mw
@@ -1,7 +1,7 @@
 {{ЭТ
  |статус                  = веле
  |Эрзянь лем              = Гумны
- |оригинальное название   = {{Lang-ru|д. Гумны}}
+ |оригинальное название   = {{Lang-ru|c. Гумны}}
  |изображение             = 
  |подчинение              = 
  |мастор                  = Россия
@@ -53,13 +53,13 @@
  |почтовые индексы        = 
  |автомобильный код       = 13
  |вид идентификатора      = ОКАТО
- |цифровой идентификатор  = {{ОКАТО|89234868003}}
+ |цифровой идентификатор  = {{ОКАТО|89634404101}}
  |категория в Commons     = 
  |сайт                    = 
  |язык сайта              = 
 }}
 
-'''Гумны''' ({{Lang-ru| д. Гумны}}) — веле [[Якстерекуро буе]]сэ, [[Мордовия]]со.
+'''Гумны''' ({{Lang-ru| c. Гумны}}) — веле [[Якстерекуро буе]]сэ, [[Мордовия]]со.
 
 
 == Веленть лемденть  ==
