--- a/Раськень_Озкс.mw
+++ b/Раськень_Озкс.mw
@@ -397,7 +397,7 @@
 
 Раськень Озксонь ютавтома коесь вейсэнди эрзятнень, невти минек сюпав коенек, ды сралезь-стувтозь оймеёжомарямочинек. Раськень Озксось невти тагояк мерян эрзянь раськенть домка философиянзо, нама те озксось невти эрзятнень сеть шкатнестэ ульнесь вейсэньлувсо эрямонь демократиянь лув. 
 
-Те сёрмадовксонть анокстамсто тень пек лездасть [[Маризь Кемаль|Маризь Кемалянь]] вешневксэнзэ-муевксэнзэ, ды мейсэяк а онкставиця раськень вельмевтема тевензэ, А.П. Рябов лемсэ эрзянь келень идема фондонть ломантнень Нуянь Видязонь, Кшуманцянь Пиргужонь, "Торама» ансамблянть морыцятнень ды сонсь ансамблянь прявтонть Кавалонь Оло. Вейкине Модамасторонть лангсо эрзянь раськень музеенть панжицянзо ды эрзянь раськень Пазне Ознома таркатнень ды кезэрень калмотнень ванстыцянтень Аношонь Тумайне Обранёнксонь Лукоянова ошсто. Модас сюкпря [[Покш Игнадбуе|Покш Игнадбуень]] весе эрицятненень конатат ютавтызь 370 иень ютазь Чукалонь Эрямопандосонть [[1999 ие|1999]] иень Раськень Озксонть. 
+Те сёрмадовксонть анокстамсто тень пек лездасть [[Маризь Кемаль|Маризь Кемалянь]]<ref name="ЖРЕЧЕСКАЯ ТРАДИЦИЯ">Саберов Р. А. ЖРЕЧЕСКАЯ ТРАДИЦИЯ МОРДВЫ В XVIII–XXI ВЕКАХ{{ref-ru}}</ref> вешневксэнзэ-муевксэнзэ, ды мейсэяк а онкставиця раськень вельмевтема тевензэ, А.П. Рябов лемсэ эрзянь келень идема фондонть ломантнень [[Нуянь Видяз|Нуянь Видязонь]], Кшуманцянь Пиргужонь<ref name="ЖРЕЧЕСКАЯ ТРАДИЦИЯ"/>, [[«Торама» морамо-седямо кужо|"Торама» ансамблянть]] морыцятнень ды сонсь ансамблянь прявтонть [[Йовлань Оло]]<ref name="ЖРЕЧЕСКАЯ ТРАДИЦИЯ"/>. Вейкине Модамасторонть лангсо эрзянь раськень музеенть панжицянзо ды эрзянь раськень Пазне Ознома таркатнень ды кезэрень калмотнень ванстыцянтень Аношонь Тумайне Обранёнксонь Лукоянова ошсто. Модас сюкпря [[Покш Игнадбуе|Покш Игнадбуень]] весе эрицятненень конатат ютавтызь 370 иень ютазь Чукалонь Эрямопандосонть [[1999 ие|1999]]<ref name="ЖРЕЧЕСКАЯ ТРАДИЦИЯ"/> иень Раськень Озксонть. 
 
 Нама лездасть Шахматовонь, Евсевьевень, Печорскоень сёрмадовкстнэ. Ламось марязель Покштянь пельде. Критиктне, кадык пек алсто сардт а таргсить, видечись сон а кекшеви, саты маньчемс эсь прянок, васняяк эрзятненень, минек раськесь истямо жо сюпав эрьва мейсэ кода лиятатнеяк эряви вешнемс весе паронть ды совавтомс эрямозонок, сестэ раськенть карми икеле чизэ, вельмемазо. Ансяк весе вейсэ, мирём минь эрзятне виевтяно, мазыйтяно ды Инешкипазонь Чанстесь ды Покштятнень эрямо таштавт сюпавчись кармить ветямонок валдо Икелечинтень. 
 
