*Empty MediaWiki Message*

--- a/Долговерясы_(Якстерекуро_буе).mw
+++ b/Долговерясы_(Якстерекуро_буе).mw
@@ -59,10 +59,18 @@
  |язык сайта              = 
 }}
 
-'''Долговерясы''' ({{Lang-ru|с. Долговерясы}}) — веле [[Якстерекуро буе]]сэ, [[Мордовия]]со.
+'''Долговерясы''' ({{Lang-ru|с. Долговерясы}}) — рузонь<ref name="Память, запечатленная в слове">Цыганкин Д. В. Память, запечатленная в слове. Словарь географических названий Республики Мордовия.  Саранск, 2005. – 431 с. {{ref-ru}}, {{ref-myv}}, {{ref-mdf}}</ref> веле [[Якстерекуро буе]]сэ, [[Мордовия]]со.
 
+Ашти [[ Кивчей лей]] лангсо. Кода лецтяви<ref name="Память, запечатленная в слове"/>:
+{{Цитатань ушодома}} ({{Lang-myv|([[1869 ие]]) ''Долговерясы – веле 155 кудот марто Якстерекуронь уездсэ''.}}
+{{oq|ru|В «СНМ Пензенской губернии» (1869) – Долговерясы, село из 155 дворов  Краснослободского уезда.}}
+{{Цитатань пе}}
+
+Эрицятнеде: [[2002 ие]]стэ ульнесь 122 лом., 2010 иень ловномасонть - 73 лом., 2012 иестэ - 18 ломанть.  
 
 == Веленть лемденть  ==
+Лемесь саеви ({{Lang-ru|долгая ряса}}) валстонть. Кода сёрмады В. Даль '''ряса''': «мокредь, мокрота, слякоть; топкое место»<ref name="Толковый словарь живого">Даль В. Толковый словарь живого великорусского языка. Т. 1 – 4. М.: Цитадель, 1998. {{ref-ru}}</ref>.
+
 == Содавикс ломанть те велестэнть ==
 == Веленть эрямозо  ==
 == Сёрм.: ==
