--- a/Долговерясы_(Якстерекуро_буе).mw
+++ b/Долговерясы_(Якстерекуро_буе).mw
@@ -69,7 +69,7 @@
 Эрицятнеде: [[2002 ие]]стэ ульнесь 122 лом., 2010 иень ловномасонть - 73 лом., 2012 иестэ - 18 ломанть.  
 
 == Веленть лемденть  ==
-Лемесь саеви ({{Lang-ru|долгая ряса}}) валстонть. Кода сёрмады В. Даль '''ряса''': «мокредь, мокрота, слякоть; топкое место»<ref name="Толковый словарь живого">Даль В. Толковый словарь живого великорусского языка. Т. 1 – 4. М.: Цитадель, 1998. {{ref-ru}}</ref>.
+Лемесь саеви ({{Lang-ru|долгая ряса}}) валсюлмавкстонть. Кода сёрмады В. Даль '''ряса''': «мокредь, мокрота, слякоть; топкое место»<ref name="Толковый словарь живого">Даль В. Толковый словарь живого великорусского языка. Т. 1 – 4. М.: Цитадель, 1998. {{ref-ru}}</ref>.
 
 == Содавикс ломанть те велестэнть ==
 == Веленть эрямозо  ==
