*Empty MediaWiki Message*

--- a/Гумны_(Якстерекуро_буе).mw
+++ b/Гумны_(Якстерекуро_буе).mw
@@ -58,11 +58,18 @@
  |сайт                    = 
  |язык сайта              = 
 }}
+{{Лия смустьтне|Гумны (смустьтне)}}
+'''Гумны''' ({{Lang-ru| c. Гумны}}) — рузонь<ref name="Память, запечатленная в слове"/> веле [[Якстерекуро буе]]сэ, [[Мордовия]]со.
 
-'''Гумны''' ({{Lang-ru| c. Гумны}}) — веле [[Якстерекуро буе]]сэ, [[Мордовия]]со.
+Ашти [[Гуменка лей|Гуменка леенть]] лангсо,  [[Мокша лей|Мокша леенть]] сянглейсэ. Кода лецтяви:
+{{Цитатань ушодома}} ({{Lang-myv|([[1931 ие]]) ''Гумны – веле 165 кудот марто''.}}
+{{oq|ru|В «СНМ Пензенской губернии» (1869) – Гумны, село  из 165 дворов  Краснослободского уезда.}}
+{{Цитатань пе}}
 
-
+Эрицятнеде: [[2002 ие]]стэ ульнесь 760 лом., 2010 иень ловномасонть - 743 ломанть. 
 == Веленть лемденть  ==
+Лемесь-гидроним <ref name="Память, запечатленная в слове">Цыганкин Д. В. Память, запечатленная в слове. Словарь географических названий Республики Мордовия.  Саранск, 2005. – 431 с. {{ref-ru}}, {{ref-myv}}, {{ref-mdf}}</ref>.
+
 == Содавикс ломанть те велестэнть ==
 == Веленть эрямозо  ==
 == Сёрм.: ==
