*Empty MediaWiki Message*

--- a/Сире_Шайгав_(Ташто_Шайгабуе).mw
+++ b/Сире_Шайгав_(Ташто_Шайгабуе).mw
@@ -60,7 +60,10 @@
 }}
 '''Сире Шайгав''' ({{Lang-ru|с. Старое Шайгово}}) — [[мокшот|мокшонь]]<ref name="Многоликая">[http://mnogolik-mordovia.mrsu.ru/r_Staroe_Shaigovo.htm Многоликая Мордовия: Село Старое Шайгово] {{Ref-ru}}</ref> веле [[Мордовия Республикась|Мордовия]]со. Велесь совавтови [[Ташто Шайгабуе]]с. 
 
-Ашти [[Сивинь лей]] лангсо. Лецтяви ({{Lang-ru|Списке населенных мест Пензенской губернии}}) ([[1869 ие]]) ''Старое Шайгово — 92<ref name="Многоликая"/> кудот марто Инсаронь уездсэ''.
+Ашти [[Севонь лей|Сивинь лей]] лангсо. Кода лецтяви<ref name="Память, запечатленная в слове"/>:
+{{Цитатань ушодома}} ({{Lang-myv|([[1869 ие]]) ''Старое Шайгово – веле 83 кудот марто Инсаронь уездсэ''.}}
+{{oq|ru|В «СНМ Пензенской губернии» (1869) – Старое Шайгово, село  из 83 дворов  Инсарского уезда. }}
+{{Цитатань пе}}
 
 == Веленть лемденть  ==
 Веленть лемесь саеви  ({{Lang-mdf|шяй}}) ({{Lang-ru|«камыш; болото, трясина»}})<ref name="Память, запечатленная в слове">Цыганкин Д. В. Память, запечатленная в слове. Словарь географических названий республики мордовия.  Саранск, 2005. – 431 с. {{ref-ru}}, {{ref-myv}}</ref> + топоформант -го ~ -га.
