*Empty MediaWiki Message*

--- a/Верхний_Кивчей_(Ташто_Шайгабуе).mw
+++ b/Верхний_Кивчей_(Ташто_Шайгабуе).mw
@@ -78,4 +78,4 @@
 
 [[Category:Мордовиянь велеть|В]]
 [[Category:Ташто Шайгабуень велеть|В]]
-[[Category:Мокшонь велеть]]
+[[Category:Рузонь велеть]]
