*Empty MediaWiki Message*

--- a/Краснай_(Атюрьбуе).mw
+++ b/Краснай_(Атюрьбуе).mw
@@ -58,6 +58,7 @@
  |сайт                    = 
  |язык сайта              = 
 }}
+{{Лия смустьтне|Краснай (смустьтне)}}
 '''Краснай'''  ({{lang-ru|д. Красновка}}) — те мокшонь веле [[Мордовия Республикась|Мордовия]]со, [[Атюрьбуе]]сэ.
 
 == Сёрм.: ==
