*Empty MediaWiki Message*

--- a/Шонгарь_(Ковёлбуе).mw
+++ b/Шонгарь_(Ковёлбуе).mw
@@ -12,8 +12,8 @@
  |описание флага          = 
  |ширина герба            = 
  |ширина флага            = 
-  |lat_dir = |lat_deg = 54,116212|lat_min = |lat_sec = 
-  |lon_dir = |lon_deg = 43,44119508|lon_min = |lon_sec = 
+  |lat_dir = |lat_deg = 54.01946933525701|lat_min = |lat_sec = 
+  |lon_dir = |lon_deg = 43.73605728149414|lon_min = |lon_sec = 
   |CoordAddon             = 
   |CoordScale             = 
  |размер карты страны     = 
@@ -60,20 +60,20 @@
  |язык сайта              = 
 }}
 {{Лия смустьтне|Гумны (смустьтне)}}
-'''Шонгарь'''  ({{lang-ru|п. Гумны}}) — те мокшонь<ref name="Память, запечатленная в слове">Цыганкин Д. В. Память, запечатленная в слове. Словарь географических названий Республики Мордовия.  Саранск, 2005. – 431 с. {{ref-ru}}, {{ref-myv}}</ref> веле [[Мордовия Республикась|Мордовия Республикань]] [[Ковёлбуе|Ковёлбуесэ]].
+'''Шонгарь<ref name="ГЕОПОРТАЛ">[http://geo13.ru/reestr/object/799 Геопортал РГО: с. Гумны] {{Ref-ru}}</ref>'''  ({{lang-ru|п. Гумны}}) — те мокшонь<ref name="Память, запечатленная в слове">Цыганкин Д. В. Память, запечатленная в слове. Словарь географических названий Республики Мордовия.  Саранск, 2005. – 431 с. {{ref-ru}}, {{ref-myv}}</ref> веле [[Мордовия Республикась|Мордовия Республикань]] [[Ковёлбуе|Ковёлбуесэ]].
 
 Ашти [[Грачевник лей]] лангсо. Кода лецтяви<ref name="Память, запечатленная в слове"/>:
 {{Цитатань ушодома}} ({{Lang-myv|([[1869 ие]]) ''Гумны – веле 83 кудот марто Норовчатонь уездсэ''.}}
-{{oq|ru|В «СНМ Пензенской губернии» (1869) – Гумны, село  из 83 дворов  Норовчатского уезда. Поселение основали выходцы из села Шингарино (Шингорня).}}
+{{oq|ru|В «СНМ Пензенской губернии» (1869) – Гумны, село  из 83 дворов  Норовчатского уезда. Поселение основали выходцы из села Шингарино (Шингорня, Шокгарня<ref name="ГЕОПОРТАЛ"/>).}}
 {{Цитатань пе}}
 
 Эрицятнеде: [[2002 ие]]стэ ульнесь 367 лом., 2010 иень ловномасонть - 275 ломанть.  
 
 == Веленть лемденть  ==
-Лемесь саезь ({{lang-ru|гумно – тип сельсхохозяйственной постройки, предназначенной для сушки, хранения и молотьбы снопов}}). Мокшонь '''Шонгарь''' лемесь сюлмави   {{lang-mdf|'''шонгар'''}} ({{lang-ru|«жидкий», в топонимии – болотистый}})<ref name="Память, запечатленная в слове">Цыганкин Д. В. Память, запечатленная в слове. Словарь географических названий Республики Мордовия.  Саранск, 2005. – 431 с. {{ref-ru}}, {{ref-myv}}</ref>.
-
+Лемесь саезь ({{lang-ru|гумно – тип сельсхохозяйственной постройки, предназначенной для сушки, хранения и молотьбы снопов}}). XVII пингестэ<ref name="ГЕОПОРТАЛ"/> веленть лемесь ульнесь '''Шонгарь''', валонть смустезэ ({{lang-ru|«болото», «жидкий», в топонимии – болотистый}})<ref name="Память, запечатленная в слове">Цыганкин Д. В. Память, запечатленная в слове. Словарь географических названий Республики Мордовия.  Саранск, 2005. – 431 с. {{ref-ru}}, {{ref-myv}}</ref>.   
 == Содавикс ломанть те велестэнть ==
 == Веленть эрямозо  ==
+
 == Сёрм.: ==
 <references />
 
