*Empty MediaWiki Message*

--- a/Кивчей_(Ташто_Шайгабуе).mw
+++ b/Кивчей_(Ташто_Шайгабуе).mw
@@ -59,7 +59,7 @@
  |язык сайта              = 
 }}
 {{Лия смустьтне|Кивчей (смустьтне)}}
-'''Кивчей''' — рузонь<ref name="ГЕОПОРТАЛ">[http://geo13.ru/reestr/object/311 Геопортал РГО: п. Верхний Кивчей] {{Ref-ru}}</ref> веле [[Мордовия Республикась|Мордовия]]со, [[Ташто Шайгабуе]]сэ. 
+'''Кивчей''' — рузонь<ref name="ГЕОПОРТАЛ">[http://geo13.ru/reestr/object/1209 Геопортал РГО: д. Кивчей] {{Ref-ru}}</ref> веле [[Мордовия Республикась|Мордовия]]со, [[Ташто Шайгабуе]]сэ. 
 
 Ашти [[Кивчей лей|Кивчей лееенть]] лангсо. Кода лецтяви<ref name="Память, запечатленная в слове"/>:
 {{Цитатань ушодома}} ({{Lang-myv|([[1931 ие]]) ''Кивчей – веле 182 кудот марто Ташто Шайговань Ново-Александровань вельсоветсэ''.}}
