*Empty MediaWiki Message*

--- a/Татарский_Лундан_(Пейкужо_буе).mw
+++ b/Татарский_Лундан_(Пейкужо_буе).mw
@@ -59,9 +59,18 @@
  |сайт                    = 
  |язык сайта              = 
 }}
-'''Татарский Лундан''' — [[печкаст|печкасонь]]<ref name="Многоликая">[http://mnogolik-mordovia.mrsu.ru/h_Tatarskiy_Lyndan.htm Многоликая Мордовия: Деревня Татарский Лундан] {{Ref-ru}}</ref> веле  [[Пейкужо буе]]сэ, [[Мордовия]]со.
+'''Татарский Лундан''' — [[печкаст|печкасонь]]<ref name="ГЕОПОРТАЛ">[http://geo13.ru/reestr/object/570 Геопортал РГО: д. Татарский Лундан] {{Ref-ru}}</ref> веле  [[Пейкужо буе]]сэ, [[Мордовия]]со.
+
+
+Ашти [[Лундан лей|Лундан лееенть]] верьга чудемасонзо. Кода лецтяви<ref name="Память, запечатленная в слове"/>:
+{{Цитатань ушодома}} ({{Lang-myv|([[1931 ие]]) ([[1869 ие|1869]]) ''Лундан – веле 138 кудот марто Керенэнь уездсэ''.}}
+{{oq|ru|В «СНМ Пензенской губернии» (1869) – Лундан (Сергиевское) - село казенное (татарская часть) и владельческое (русская часть) из 138 дворов с церковью и мечетями Керенского уезда.}}
+{{Цитатань пе}}
+
+Эрицятнеде: [[2002 ие]]стэ ульнесь 103 лом., 2010 иень ловномасонть - 87 ломанть.  
 
 == Веленть лемденть  ==
+Лемесь–гидроним<ref name="Память, запечатленная в слове">Цыганкин Д. В. Память, запечатленная в слове. Словарь географических названий республики мордовия.  Саранск, 2005. – 431 с. {{ref-ru}}, {{ref-myv}}</ref>.
 == Содавикс ломанть те велестэнть ==
 == Веленть эрямозо  ==
 == Сёрм.: ==
