*Empty MediaWiki Message*

--- a/Парца_лей.mw
+++ b/Парца_лей.mw
@@ -21,16 +21,16 @@
   |Ёнкст                  = Мордовия Республикась/Пензань ёнкс 
    |Буе                   = 
 }}
-
+{{Лия смустьтне|Парца (смустьтне)}}
 '''Парца''' —  лей, чудиця [[Мордовия Республикась|Мордовиясо]] ды [[Пензань ёнкс]]о. 
-[[Вадолей|Вадолеень]] витьёнонь сянглей ([[Йока|Йокань]] пурнавкссо).
+[[Вадолей|Вадолеень]] витьёнонь сянглей ([[Йока|Йокань]]<ref>[http://textual.ru/gvr/index.php?card=179240 Государственный водный реестр РФ: Парца]{{ref-ru}}</ref> пурнавкссо).
 
-Кувалмозо 117  [[Вайгельпе|вп]], эйстэст 92 вп Мордовиява. Покшолмозо весемекс 2700 вп². 
+Кувалмозо 117  [[Вайгельпе|вп]], эйстэст 92 вп Мордовиява<ref name="Энциклопедический словарь">Энциклопедический словарь географических терминов.  М.: Наука, 1968. 437 с.{{ref-ru}}</ref>. Покшолмозо весемекс 2700 вп². 
 
 Парца лей лангсо аштить велетне<ref name="Память, запечатленная в слове">Цыганкин Д. В. Память, запечатленная в слове. Словарь географических названий Республики Мордовия.  Саранск, 2005. – 431 с. {{ref-ru}}, {{ref-myv}}</ref>: [[Зубу (Пейкужо буе)|Зубова Поляна]], [[Аким-Сергеевка (Пейкужо буе)|Аким-Сергеевка]], [[Оцяду 2 (Пейкужо буе)|Ачадовка]], [[Од Потманя (Пейкужо буе)|Нов. Потьма]], [[Сире Потманя (Пейкужо буе)|Ст. Потьма]], [[Краснознаменка (Пейкужо буе)|Краснознаменка]], [[Валда Кужа (Пейкужо буе)|Ясная Поляна]], [[Романовка (Пейкужо буе)|Романовка]], [[Парьхця (Пейкужо буе)|Парца]], [[Слаим (Торбейбуе)|Слаим]],  [[Cургодь (Торбейбуе)|Сургодь]], [[Кажлодка (Торбейбуе)|Кажлодка]].
 
 == Леенть лемденть  ==
-Лемесь–фитоним<ref name="Память, запечатленная в слове"/>:{{Lang-mdf|парьхци}} - {{Lang-ru|«водоросли»}}.
+Лемесь–фитоним<ref name="Память, запечатленная в слове"/>:{{Lang-mdf|парьхци}} - ({{Lang-ru|«водоросли»<ref>[http://www.cigankin.ru/archives/200 Топонимия Торбеевского района (Д. В. Цыганкин)]{{ref-ru}}, {{ref-myv}}, {{ref-mdf}}</ref>}}).
 
 
 == Вадолеень сянголейтне (вп прамсто)==
