--- a/Парца_(смустьтне).mw
+++ b/Парца_(смустьтне).mw
@@ -1,6 +1,6 @@
 '''Парца''':
 ;Топонимт
-* [[Парьхця (Пейкужо буе)|Парця)]] — мокшонь посёока [[Пейкужо буе]]сэ [[Мордовия]]со.
+* [[Парьхця (Пейкужо буе)|Парця]] — мокшонь посёока [[Пейкужо буе]]сэ [[Мордовия]]со.
 * [[Парцы (Кадонь буе)|Парцы]] — рузонь веле [[Кадоньбуе]]сэ [[Мордовия]]со. 
 
 ;Гидроним
